--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -17,7 +17,25 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
       - name: Run Tests
         run: mvn test
+
+      - name: Build with Maven
+        run: mvn -B clean package -DfinalName=mi-aplicacion
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: sa-east-1
+
+      - name: Create ECR repository
+        run: REPO_NAME="mi-aplicacion-repo" aws ecr create-repository --repository-name $REPO_NAME
+
+      - name: Login to Amazon ECR
+        uses: aws-actions/amazon-ecr-login@v1
