--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -18,14 +18,11 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Build and Package with Maven
+        run: mvn -B clean package -DfinalName=mi-aplicacion --file pom.xml
 
       - name: Run Tests
         run: mvn test
-
-      - name: Build with Maven
-        run: mvn -B clean package -DfinalName=mi-aplicacion
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -41,3 +38,12 @@ jobs:
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build Docker image
+        run: docker build -t mi-aplicacion .
+
+      - name: Tag Docker image
+        run: docker tag mi-aplicacion:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com/mi-aplicacion-repo:latest
+
+      - name: Push Docker image to ECR
+        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.sa-east-1.amazonaws.com/mi-aplicacion-repo:latest
