--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -47,7 +47,13 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build Docker image
+      - name: Copy JAR to workspace root
+        run: cp target/mi-aplicacion.jar mi-aplicacion.jar
+
+      - name: List files in workspace
+        run: ls -la
+
+      - name: Build Docker Image
         run: docker build -t mi-aplicacion .
 
       - name: Tag Docker image
