--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -28,24 +28,24 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: sa-east-1
 
-      - name: Check if ECR repository exists
-        id: ecr-check
-        continue-on-error: true
-        run: |
-          REPO_NAME="mi-aplicacion-repo"
-          aws ecr describe-repositories --repository-names $REPO_NAME
+      #- name: Check if ECR repository exists
+      #  id: ecr-check
+      #  continue-on-error: true
+      #  run: |
+      #    REPO_NAME="mi-aplicacion-repo"
+      #    aws ecr describe-repositories --repository-names $REPO_NAME
 
-      - name: Create ECR repository if not exists
-        if: steps.ecr-check.outcome == 'failure'
-        run: |
-          REPO_NAME="mi-aplicacion-repo"
-          aws ecr create-repository --repository-name $REPO_NAME
+      #- name: Create ECR repository if not exists
+      #  if: steps.ecr-check.outcome == 'failure'
+      #  run: |
+      #    REPO_NAME="mi-aplicacion-repo"
+       #   aws ecr create-repository --repository-name $REPO_NAME
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
+      #- name: Login to Amazon ECR
+      #  uses: aws-actions/amazon-ecr-login@v1
 
       - name: List files in workspace
-        run: ls -la
+        run: ls -la -la target
 
       - name: Copy JAR to workspace root
         run: cp target/mi-aplicacion.jar mi-aplicacion.jar
