--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Build and Package with Maven
-        run: mvn -B clean package -D finalName=mi-aplicacion
+        run: mvn -B clean package -D
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
